# dnd-initiative-tracker

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  cmake_variables.hpp.in  encounter.cpp  encounter.hpp  entity.cpp  entity.hpp  main.cpp
test/: CMakeLists.txt  encounter_test.cpp  entity_test.cpp
